--- a/tools/digital_matcher/CMakeLists.txt
+++ b/tools/digital_matcher/CMakeLists.txt
@@ -29,20 +29,21 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -L/usr/local/Cellar/libusb/1.0.20/lib")
 set(SOURCE_FILES main.cpp)
 add_executable(digital ${SOURCE_FILES})
 
-#target_link_libraries(digital /usr/lib/libfprint.a)
-target_link_libraries(digital fprint)
+target_link_libraries(digital /usr/local/lib/libfprint.a)
+#target_link_libraries(digital fprint)
 #target_link_libraries(digital ${LIBFPRINT})
 #target_link_libraries(digital intl)
-#target_link_libraries(digital glib-2.0)
-#target_link_libraries(digital pixman-1)
-#target_link_libraries(digital nss3)
-#target_link_libraries(digital nssutil3)
-#target_link_libraries(digital smime3)
-#target_link_libraries(digital ssl3)
-#target_link_libraries(digital plds4)
-#target_link_libraries(digital plc4)
-#target_link_libraries(digital nspr4)
-#target_link_libraries(digital usb-1.0)
+target_link_libraries(digital glib-2.0)
+target_link_libraries(digital pixman-1)
+target_link_libraries(digital nss3)
+target_link_libraries(digital nssutil3)
+target_link_libraries(digital smime3)
+target_link_libraries(digital ssl3)
+target_link_libraries(digital plds4)
+target_link_libraries(digital plc4)
+target_link_libraries(digital nspr4)
+target_link_libraries(digital usb-1.0)
 target_link_libraries(digital crypto)
 target_link_libraries(digital curl)
+target_link_libraries(digital wiringPi)
 
