--- a/tools/digital_matcher/CMakeLists.txt
+++ b/tools/digital_matcher/CMakeLists.txt
@@ -20,27 +20,33 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -L/usr/local/Cellar/nss/3.26/lib")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -L/usr/local/Cellar/nspr/4.12_1/lib")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -L/usr/local/Cellar/libusb/1.0.20/lib")
 
-set(SOURCE_FILES Digital.cpp)
+add_library(Digital STATIC Digital.cpp)
+add_library(Device STATIC Device.cpp)
+
 set(SOURCE_FILES main.cpp)
 add_executable(digital ${SOURCE_FILES})
 
-target_link_libraries(digital /usr/local/lib/libfprint.a)
-target_link_libraries(digital glib-2.0)
-target_link_libraries(digital pixman-1)
-target_link_libraries(digital nss3)
-target_link_libraries(digital nssutil3)
-target_link_libraries(digital smime3)
-target_link_libraries(digital ssl3)
-target_link_libraries(digital plds4)
-target_link_libraries(digital plc4)
-target_link_libraries(digital nspr4)
-target_link_libraries(digital usb-1.0)
-target_link_libraries(digital crypto)
-target_link_libraries(digital curl)
+target_link_libraries(digital Digital)
+target_link_libraries(Digital Device)
+
+target_link_libraries(Digital /usr/local/lib/libfprint.a)
+target_link_libraries(Digital glib-2.0)
+target_link_libraries(Digital pixman-1)
+target_link_libraries(Digital nss3)
+target_link_libraries(Digital nssutil3)
+target_link_libraries(Digital smime3)
+target_link_libraries(Digital ssl3)
+target_link_libraries(Digital plds4)
+target_link_libraries(Digital plc4)
+target_link_libraries(Digital nspr4)
+target_link_libraries(Digital usb-1.0)
+target_link_libraries(Digital crypto)
+target_link_libraries(Digital curl)
 
 if(DEBUG==OFF)
   target_link_libraries(digital wiringPi)
 endif()
+
 
 install(TARGETS digital DESTINATION bin)
 
