--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,10 @@ default: &default
 
 development:
   <<: *default
-  database: siglateste
+  # database: siglateste
+  host: db
+  username: postgres
+  password:
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
