--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,18 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
   adapter: postgresql
-  enconding: unicode
+  encoding: unicode
+  user: postgres
+  password: postgres
   pool: 5
   timeout: 5000
 
 development:
   <<: *default
-  database: siglateste
+  database: sigla-dev
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: siglatestetest
+  database: sigla-test
 
 production:
   <<: *default
