added step before bundle installing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,8 +32,16 @@ jobs:
           - v1-dependencies-
 
       - run:
+          name: Configure Bundler
+          command: |
+            echo 'export BUNDLER_VERSION=$(cat Gemfile.lock | tail -1 | tr -d " ")' >> $BASH_ENV
+            source $BASH_ENV
+            gem install bundler
+            
+      - run:
           name: Bundle Install
           command: bundle check || bundle install --path vendor/bundle
+
 
       - save_cache:
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
