--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,9 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  user: postgres
-  password: postgres
+  host: <%= ENV["DATABASE_HOST"] %>
+  user: <%= ENV["DATABASE_USER"] %>
+  password: <%= ENV["DATABASE_PASSWORD"] %>
   pool: 5
   timeout: 5000
 
